added manifest to index html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.7/dist/css/uikit.min.css" />
 	<link rel="stylesheet" href="./home.css"
 	<meta charset="UTF-8">
+	<link rel="manifest" href="/manifest.json">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta http-equiv="origin-trial" content="Aldq7pgQYte3rRTfmkkGPJjmZNWGMOU5bwgDc2HgsNleX9Aswr2YQLR4vnBkxpJ2zzUmdanDtK0XaFgaNGeAVQwAAABveyJvcmlnaW4iOiJodHRwczovL3Rla2NoYXQubWF0dGVvZ2Fzc2VuZC5jb206NDQzIiwiZmVhdHVyZSI6IkJhZGdpbmdWMiIsImV4cGlyeSI6MTU4NDQ0NTc1NywiaXNTdWJkb21haW4iOnRydWV9" >
